# gabber-kick-generator

./: .gitignore  CMakeLists.txt  README.md  dsp_test.cpp
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
docs/: gabber-presets.json  gabber-presets.md  techno-presets.json  techno-presets.md
